style: changed background and text color

--- a/framework/index.html
+++ b/framework/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-6 text-right ">
                 <h1 class="text-thin title-super">Daniel Bales</h1>
-                <h3>Ninja</h3>
+                <h3>Front End Developer</h3>
             </div>
         </div>
         <div class="row">
@@ -41,13 +41,13 @@
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project1">
                 <h3>Appify</h3>
-                <p><a href="http://github.com">Link to project</a>
+                <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project2">
                 <h3>Sunflower</h3>
-                <p><a href="http://github.com">Link to project</a>
+                <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
         </div>
@@ -55,13 +55,13 @@
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project3">
                 <h3>Bokeh</h3>
-                <p><a href="http://github.com">Link to project</a>
+                <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project4">
                 <h3>Daniel</h3>
-                <p><a href="http://github.com">Link to project</a>
+                <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
         </div>
