feat: new images and updated modal content

--- a/framework/index.html
+++ b/framework/index.html
@@ -39,28 +39,28 @@
         </div>
         <div class="row text-center">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project1">
-                <h3>Appify</h3>
+                <img class="img-responsive" src="images/daniel-bales-gazos.jpg" alt="Daniel Bales surfing Gazos" data-toggle="modal" data-target="#project1">
+                <h3>Central Coast</h3>
                 <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project2">
-                <h3>Sunflower</h3>
+                <img class="img-responsive" src="images/daniel-bales-gazos.jpg" alt="Daniel Bales surfing Gazos" data-toggle="modal" data-target="#project2">
+                <h3>Central Coast</h3>
                 <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
         </div>
         <div class="row text-center">
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project3">
-                <h3>Bokeh</h3>
+                <img class="img-responsive" src="images/daniel-bales-fiji.jpg" alt="Daniel Bales surfing Fiji" data-toggle="modal" data-target="#project3">
+                <h3>Cloudbreak</h3>
                 <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
             <div class="col-md-6">
-                <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder" data-toggle="modal" data-target="#project4">
-                <h3>Daniel</h3>
+                <img class="img-responsive" src="images/daniel-bales-fiji.jpg" alt="Daniel Bales surfing Fiji" data-toggle="modal" data-target="#project4">
+                <h3>Cloudbreak</h3>
                 <p><a class="project-link" href="http://github.com">Link to project</a>
                 </p>
             </div>
@@ -70,10 +70,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel">Favorite App Page</h4>
+                        <h4 class="modal-title" id="myModalLabel">Central Coast</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder"> This was my first project in this class. I learned a lot about HTML and CSS.
+                        <img class="img-responsive" src="images/daniel-bales-gazos.jpg" alt="Daniel Bales surfing Gazos">This is me getting barreled on the central coast.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -86,10 +86,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel1">Favorite App Page</h4>
+                        <h4 class="modal-title" id="myModalLabel1">Central Coast</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder"> This was my first project in this class. I learned a lot about HTML and CSS.
+                        <img class="img-responsive" src="images/daniel-bales-gazos.jpg" alt="Daniel Bales surfing Gazos">This is me getting barreled on the central coast.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -102,10 +102,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel2">Favorite App Page</h4>
+                        <h4 class="modal-title" id="myModalLabel2">Cloudbreak</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder"> This was my first project in this class. I learned a lot about HTML and CSS.
+                        <img class="img-responsive" src="images/daniel-bales-fiji.jpg" alt="Daniel Bales duck-diving at Cloudbreak">This is me duck-diving at Cloudbreak.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -118,10 +118,10 @@
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <h4 class="modal-title" id="myModalLabel3">Favorite App Page</h4>
+                        <h4 class="modal-title" id="myModalLabel3">Cloudbreak</h4>
                     </div>
                     <div class="modal-body">
-                        <img class="img-responsive" src="http://placekitten.com/555/300" alt="placeholder"> This was my first project in this class. I learned a lot about HTML and CSS.
+                        <img class="img-responsive" src="images/daniel-bales-fiji.jpg" alt="Daniel Bales duck-diving at Cloudbreak">This is me duck-diving at Cloudbreak.
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
