feat: updated title, added middle initial to name

--- a/framework/index.html
+++ b/framework/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <title>project2</title>
+    <title>Daniel Bales' Porfolio</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link href='https://fonts.googleapis.com/css?family=Lato:100,300' rel='stylesheet' type='text/css'>
@@ -18,7 +18,7 @@
             <div class="col-md-6"><img class="title-logo" src="images/html5cssjs.png" alt="Daniel-logo">
             </div>
             <div class="col-md-6 text-right ">
-                <h1 class="text-thin title-super">Daniel Bales</h1>
+                <h1 class="text-thin title-super">Daniel F Bales</h1>
                 <h3>Front End Developer</h3>
             </div>
         </div>
