--- a/framework/index.html
+++ b/framework/index.html
@@ -32,10 +32,10 @@
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a>
                         </li>
-                        <li><a href="#">Link</a>
+                        <li><a href="#">Testing</a>
                         </li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown Menu<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="#">Action</a>
                                 </li>
@@ -50,6 +50,8 @@
                                 <li><a href="#">One more separated link</a>
                                 </li>
                             </ul>
+                        <li><a href="mailto:danielfbales@gmail.com">Contact</a>
+                        </li>
                         </li>
                     </ul>
                     <!--<form class="navbar-form navbar-left" role="search">
@@ -88,7 +90,7 @@
             </div>
             <div class="col-md-6 text-right ">
                 <h1 class="text-thin title-super">Daniel Bales</h1>
-                <h3>Front End Ninja</h3>
+                <h3>Ninja</h3>
             </div>
         </div>
         <div class="row">
