style: added footer and changed background color

--- a/framework/index.html
+++ b/framework/index.html
@@ -50,8 +50,8 @@
                                 <li><a href="#">One more separated link</a>
                                 </li>
                             </ul>
-                        <li><a href="mailto:danielfbales@gmail.com">Contact</a>
-                        </li>
+                            <li><a href="mailto:danielfbales@gmail.com">Contact</a>
+                            </li>
                         </li>
                     </ul>
                     <!--<form class="navbar-form navbar-left" role="search">
@@ -86,11 +86,11 @@
     </div>
     <div class="container">
         <div class="row text-uppercase">
-            <div class="col-md-6"><img class="title-logo" src="images/daniel-bales-waves.png" alt="Daniel-logo">
+            <div class="col-md-6"><img class="title-logo" src="images/daniel-bales-waves1.png" alt="Daniel-logo">
             </div>
             <div class="col-md-6 text-right ">
                 <h1 class="text-thin title-super">Daniel Bales</h1>
-                <h3>Ninja</h3>
+                <h3>Front End Developer</h3>
             </div>
         </div>
         <div class="row">
@@ -199,6 +199,23 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row text-center">
+        <div class="col-md-4">
+            <p>Featured Work</p>
+            <p>Cloudbreak</p>
+            <p>Contact</p>
+        </div>
+        <div class="col-md-4">
+            <p>Featured Work</p>
+            <p>Cloudbreak</p>
+            <p>Contact</p>
+        </div>
+        <div class="col-md-4">
+            <p>Featured Work</p>
+            <p>Cloudbreak</p>
+            <p>Contact</p>
         </div>
     </div>
 </body>
